    NULL mark names. If the supplied mark name is NULL or empty, a name is 
    automaticaly generated as "MARK_" followed by digits from the current time.
  - fix an invalid column name referenced in emaj_delete_mark_group() function.
  - in emaj_delete_mark_group() function, fix an erroneous information 
    inserted into the emaj_hist table.

0.9.0
-----
Enhancements:
  - a new emaj_estimate_rollback_duration() function computes an approximate 
    value for the duration of a rollback operation. It uses statistics 
    recorded in the new emaj_rlbk_stat table, as well as 4 new parameters.
  - the emaj_set_mark_group function now returns the number of processed 
    tables and sequences as other main emaj functions.
  - add a check in emaj_log_stat_group and emaj_detailed_log_stat_group 
    functions if the supplied first mark is greater than the last_mark.
  - in emaj_detailed_log_stat_group function, change the INS/UPD/DEL values 
    returned for emaj_verb column into more explicit terms (INSERT/UPDATE/
    DELETE).
  - emaj_detailed_log_stat_group, emaj_delete_mark and emaj_rename_mark 
    functions now accept EMAJ_LAST_MARK keyword as existing mark names.
  - add a check at mark creation times to forbide EMAJ_LAST_MARK name.
  - split column hist_type from emaj_hist table into 2 columns: hist_function 
    and hist_event
  - during rollback operations, move the rollback of application sequences at 
    the very end of the operation, as these rollback (ALTER SEQUENCE) are not 
    transaction safe.
  - log sequences are now reset at emaj_reset_group or emaj_start_group time.
    This should avoid potential long term issue if the log sequence reaches 
    the upper limit of serial id.
  - starting from postgres version 8.4, a trigger is created on all tables 
    belonging to a group in order to forbid TRUNCATE SQL verb during E-Maj 
    logging time. These triggers are named <schema>_<table>_emaj_trunc_trg. 